RESOLVED FIXED293791
[iOS] Refresh control is not visible when there is fixed top element on the page
https://bugs.webkit.org/show_bug.cgi?id=293791
Summary [iOS] Refresh control is not visible when there is fixed top element on the page
Wenson Hsieh
Reported 2025-05-29 21:54:35 PDT
Attachments
Wenson Hsieh
Comment 1 2025-05-29 22:03:36 PDT
EWS
Comment 2 2025-05-30 09:22:56 PDT
Committed 295613@main (eed2135df5c1): <https://commits.webkit.org/295613@main> Reviewed commits have been landed. Closing PR #46103 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.